[gd_scene load_steps=8 format=3 uid="uid://nlbgb1sdxsw5"]

[ext_resource type="Theme" uid="uid://5im7y78yca4y" path="res://themes/pixel.tres" id="1_p42sk"]
[ext_resource type="Script" path="res://scenes/bars/top_bar.gd" id="1_rmyrv"]
[ext_resource type="Texture2D" uid="uid://dkcn3fu8n33sy" path="res://assets/img/buttons/Menu.png" id="2_gb8e4"]
[ext_resource type="Texture2D" uid="uid://c88fnr814igpc" path="res://assets/img/pixel_logo_long.png" id="3_q1c76"]

[sub_resource type="Animation" id="Animation_xtsgc"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopHbox:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_fth2l"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopHbox:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.1, 0, 0.1, 0, 0, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0ubm"]
_data = {
"RESET": SubResource("Animation_xtsgc"),
"fade_out": SubResource("Animation_fth2l")
}

[node name="TopBar" type="ColorRect"]
custom_minimum_size = Vector2(0, 70)
color = Color(0, 0, 0, 1)
script = ExtResource("1_rmyrv")

[node name="TopHbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Padding Left" type="Container" parent="TopHbox"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="OptionButton" type="Button" parent="TopHbox"]
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 1
theme = ExtResource("1_p42sk")
icon = ExtResource("2_gb8e4")

[node name="TimeLabel" type="Label" parent="TopHbox"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 40
text = "TIME"

[node name="Logo" type="TextureRect" parent="TopHbox"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("3_q1c76")
expand_mode = 3

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e0ubm")
}

[connection signal="pressed" from="TopHbox/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
